--- a/noticias/cadastro/cadastro.css
+++ b/noticias/cadastro/cadastro.css
@@ -1,14 +1,11 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
-:root {
-    --font-1:Helvetica, sans-serif;
-    --font-2: 'Noto Sans KR', sans-serif;
-}
+
 
 body {
-    background-color: #289BB8;
+    background-color: #9fd6f5;
     position: relative;
 }
 main {
@@ -18,7 +15,7 @@ main {
     margin-left: -7px;
     margin-top: -20px;
     border-radius: 10px;
-    box-shadow: 0px -1px 5px 1px grey;
+    box-shadow: 2px 4px 8px 0px rgb(0 0 0 / 43%);
     position:absolute;
     top: 140px;
     right: 37%;
@@ -44,19 +41,20 @@ fieldset#usuario {
     top: -18px;
 }
 h1 {
+    color: #003471;
     text-align: top left;
     position: relative;
     top:-15px;
     left: 25px;
-    font-family: var(--font-2);
+    font-family: 'Rajdhani', sans-serif;
     font-weight: bolder;
     font-size: 45px;
 }
 label {
     position: relative;
-    font-family: var(--font-1);
+    font-family: 'Rajdhani', sans-serif;
     font-size: 17px;
-    font-weight:normal;
+    font-weight:bold;
     left: 9px;
 }
 div {
@@ -69,6 +67,7 @@ input {
     border-radius: 5px;
     border-color: #81a3f938;
     height: 20px;
+    color: grey;
 }
 button#login {
     position: relative;
@@ -85,7 +84,7 @@ input#login {
     border-color: rgba(255, 255, 255, 0.226);
     height: 1.8em;
     font-weight: normal;
-    font-family: var(--font-2);
+    font-family: 'Rajdhani', sans-serif;
     width: 200px;
 }
 aside {
@@ -93,14 +92,14 @@ aside {
     height: 475px;
     width: 431px;
     left: 416px;
-    top: -490px;
+    top: -491px;
     border-radius: 0px 10px 10px 0px;
     background-color: #080606be;
 }
 aside > h2 {
     color: rgba(243, 243, 243, 0.616);
     text-align: center;
-    font-family: var(--font-2);
+    font-family: 'Rajdhani', sans-serif;
     position: relative;
     top: 180px;
     font-weight: bolder;
@@ -108,11 +107,11 @@ aside > h2 {
 aside > p {
     color: rgba(243, 243, 243, 0.616);
     text-align: center;
-    font-family: var(--font-2);
+    font-family: 'Rajdhani', sans-serif;
     position: relative;
     top: 184px;
 }
-aside > button {
+aside > a > button {
     background-color: #08060600;
     border-color: #0806065d;
     border: 0;
@@ -120,12 +119,12 @@ aside > button {
     left: 120px;
     top: 243px;
 }
-aside > button > input {
+aside > a > button > input {
     background-color: #81a3f925;
     border-color: rgba(255, 255, 255, 0.253);
     height: 2.2em;
     font-weight: normal;
-    font-family: var(--font-2);
+    font-family: 'Rajdhani', sans-serif;
     width: 200px;
     color: white;
 }
