--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap");
 
@@ -20,6 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: auto;
 }
 
 .navbar-brand {
@@ -28,6 +29,7 @@ body {
   font-weight: bold;
   text-decoration: none;
   color: var(--darkblue);
+  display: flex;
 }
 
 .main-navbar {
@@ -35,22 +37,31 @@ body {
   align-items: center;
   justify-content: center;
 }
-
 .main-navbar .nav-link {
   margin: 6px 6px;
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--darkblue);
 }
-
-header {
-  padding: 20px;
-}
-
-main {
+.main-cadastro{
   background: white;
-  margin: 20px 0;
-  padding: 32px;
+  box-shadow: 2px 4px 8px 0px rgb(0 0 0 / 43%);
+  border-radius: 17px;
+  height: 475px;
+  width: 847px;
+  position: relative;
+  bottom: 26px;
+  right: 108px;
 }
-
-h1 {
+.main-login {
+  background-color: #ffffff;
+  width: 450px;
+  height: 500px;
+  box-shadow: 2px 4px 8px 0px rgb(0 0 0 / 43%);
+  border-radius: 17px;
+  position: absolute;
+}
+.main-titulo {
   color: var(--darkblue);
   font-family: "Rajdhani", sans-serif;
   position: relative;
@@ -58,8 +69,168 @@ h1 {
   padding: 0px;
   font-size: 59px;
   font-weight: bolder;
+  top: 20px;
+}
+.input {
+  background-color: #81a3f925;
+  color: black;
+  width: 223px;
+  height: 30px;
+  border-radius: 10px;
+  border-color: #81a3f938;
+  text-decoration: none;
+  top: 15px;
+}
+.input-submit{
+  position: relative;
+  margin-top: 30px;
+}
+.space {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 67px;
+  padding-top: 20px;
+}
+.label {
+  position: relative;
+  left: 0px;
+  font-weight: bold;
+}
+.button {
+  height: 2em;
+  border: 0;
+  background-color: white;
+  position: relative;
+  top: 163px;
+  left: 110px;
+  margin: 5px 0px;
+}
+.quebra {
+  position: relative;
+  top: 58px;
+  width: 362px;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.fieldset{
+  position: relative;
+  right: 30px;
+  border-radius: 17px;
 }
 
+/* Especifidades do Cadastro */
+
+.space-cadastro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 8px;
+  padding-top: 20px;
+}
+.main-titulo-cadastro {
+  color: var(--darkblue);
+  font-family: "Rajdhani", sans-serif;
+  position: relative;
+  font-size: 59px;
+  font-weight: bolder;
+  top: -24px;
+  right: 210px;
+}
+.form-cadastro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom:  61px;
+  right: 184px;
+}
+.aside {
+  position: relative;
+  height: 475px;
+  width: 431px;
+  left: 416px;
+  bottom: 550px;
+  border-radius: 0px 17px 17px 0px;
+  background-color: #080606be;
+}
+.aside-subtitulo {
+  color: rgba(243, 243, 243, 0.616);
+  text-align: center;
+  font-family: 'Rajdhani', sans-serif;
+  position: relative;
+  top: 180px;
+  font-weight: bolder;
+}
+.aside-paragrafo {
+  color: rgba(243, 243, 243, 0.616);
+  text-align: center;
+  font-family: 'Rajdhani', sans-serif;
+  position: relative;
+  top: 184px;
+}
+.aside-button {
+  background-color: #08060600;
+  border-color: #0806065d;
+  border:1;
+  position: relative;
+  left: 100px;
+  top: 214px;
+}
+.aside-input {
+  color: rgba(255, 255, 255, 0.644);
+}
+.button-cadastro {
+  display: flex;
+  position: relative;
+  top: 3px;
+  left: -28px;
+}
+/* Especifidades do Login */
+body {
+  background-color: #9fd6f5;
+  font-family: Helvetica, sans-serif;
+  position: relative;
+}
+main {
+  background-color: #ffffff;
+  width: 450px;
+  height: 500px;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  margin-right: -225px;
+  margin-bottom: -250px;
+  margin-top: 79px;
+  box-shadow: 2px 4px 8px 0px rgb(0 0 0 / 43%);
+  border-radius: 17px;
+}
+h1 {
+  color: #003471;
+  text-align: center;
+  font-family: "Rajdhani", sans-serif;
+  font-weight: bolder;
+  font-size: 3.5em;
+  margin-top: 36px;
+}
+
+label {
+  color: black;
+  font-family: "Rajdhani", sans-serif;
+  font-weight: bold;
+  position: relative;
+  left: 87px;
+  top: -10px;
+}
 input {
   color: #019bf0;
   display: block;
@@ -68,10 +239,24 @@ input {
   border-radius: 10px;
   border-color: rgba(0, 0, 0, 0.192);
 }
-
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+button {
+  background-color: #08060600;
+  border-color: #493f3f54;
+  border: 0;
+  position: relative;
+  left: 168px;
+  top: 87px;
+}
+input {
+  background-color: #81a3f925;
+  border-color: rgba(78, 72, 72, 0.137);
+  height: 2.2em;
+  font-weight: normal;
+  font-family: Arial, Helvetica, sans-serif;
+  color: grey;
+}
+hr {
+  position: relative;
+  top: 100px;
+  width: 362px;
 }
